--- a/index.css
+++ b/index.css
@@ -1,11 +1,14 @@
 /*======= Create a new universal selector that changes the font color to: #3C373B */
-
+* {
+  color:#3C373B
+}
 
 h1 {
   font-family: 'Gaegu', cursive;
   margin: 20px 0;
+  text-align: center;
   /*=======  Update the font size to 60px and center the text */
-  font-size: 10px;
+  font-size: 60px;
 }
 
 h2, h3, h4, h5, h6 {
@@ -13,7 +16,7 @@ h2, h3, h4, h5, h6 {
   margin-bottom: 0;
   padding: 0 10px;
   /*=======  Update the font size to 30px */
-  font-size: 10px;
+  font-size: 30px;
 }
 
 /*======= Create a selector for ALL p tags in the site to have the following styles:
@@ -24,7 +27,12 @@ padding: 10px;
 line-height: 1.4;
 
 */
-
+p {
+  font-size: 16px;
+  font-family: roboto;
+  padding: 10px;
+  line-height: 1.4;
+}
 
 /*======= Create a selector for ALL images in the site to have the following styles: 
 
@@ -32,17 +40,23 @@ line-height: 1.4;
 
 */
 
+img {
+  border-radius: 10px;
+}
+
 .content-row {
   display: flex;
 }
 
 .content-row div {
+  margin: 20px;
   /*======= create a margin propery.  Set the value to 20px */
 }
 
 .container {
   /*======= create a width property. Set the value to 605px */
   margin: 0 auto;
+  width: 605px;
 }
 
 .container header nav a {
@@ -54,17 +68,24 @@ line-height: 1.4;
   color: white;
   text-decoration: none;
   margin-bottom: 20px;
+  background: #F87B99
    /*======= create a background property. Set the value to #F87B99 */
   
 }
 
 .container header nav a:hover {
+  background: white;
+  color: pink;
 /*======= create a background property and set it to white.  Then create a color property and set it's value to pink. */
 }
 
 /*======= Create a selector for the about section to have the following styles:
   margin-top: 20px;
 */
+
+section.about {
+  margin-top: 20px
+}
 
 .contact-section {
   border-top: 1px dashed black;
@@ -80,6 +101,10 @@ line-height: 1.4;
    line-height: 2;
 */
 
+address{
+  line-height: 2;
+}
+
 footer {
   width: 100%;
   background: #F87B99;
@@ -89,7 +114,7 @@ footer {
 footer .footer-content { 
   margin: 0 auto; 
   /*======= create a width property. Set the value to 600px */
-  
+  width: 600px;
 }
 
 footer .footer-content h3 {
@@ -107,6 +132,11 @@ footer nav {
   text-decoration: underline;
 */
 
+footer a {
+  margin: 10px;
+  color: black;
+  text-decoration: underline;
+}
 
 footer nav a:first-child {
   margin-left: 0;
@@ -115,6 +145,10 @@ footer nav a:first-child {
 /*======= Create a hover state for the anchor tag in the footer nav to have the following styles:
   color: white;
 */
+
+footer a:hover {
+  color: white;
+}
 
 footer .footer-content .copyright {
   padding: 20px 0;
